# oracular

./: .gitattributes  .gitignore  .ignore  .travis.yml  Cargo.toml  README.md  TODO.md  callgrind.out.103454  callgrind.out.103661  kmer-size-experiments.md  pyracular_test.py  run_grcov.bash  rustfmt.toml  travis.yml
benchmark-data/: README.md  alignment_distance.fasta  phylo_distance.fasta
benchmark_tools/: README.md
liboracular/: Cargo.toml
liboracular/liboracular/src/: gff3.rs  intervals.rs  kmers.rs  lib.rs  sequences.rs  utils.rs
liboracular/src/: dictionary.rs  embeddings.rs  fasta.rs  gff3.rs  intervals.rs  io.rs  kmer_counting.rs  kmer_hasher.rs  kmers.rs  kmervocab.rs  lib.rs  model.rs  sfasta.rs  threads.rs  utils.rs  vocab.rs
liboracular/test_data/: Dmel_head30.gff3  Dmel_part.fna  test.fna  test.sfasta  test_large_multiple.fna  test_multiple.fna
oracular/: Cargo.toml
oracular/src/: cli.yaml  main.rs
pyracular/: Cargo.toml
pyracular/src/: lib.rs  pyproject.toml  taxonomy.rs
sfa/: Cargo.toml
sfa/src/: cli.yaml  main.rs
src/: cli.yaml  dictionary.rs  main.rs  trainer.rs  vocab.rs
