[package]
name = "liboracular"
version = "0.2.0"
authors = ["Joseph Guhlin <joseph.guhlin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnv = "1.0.7"
serde = { version = "1.0.116", features = ["derive"] }
rand = "0.7.3"
rand_core = "0.5"
rand_xorshift = "0.2"
rand_chacha = "0.2.2"
indicatif = "0.15.0"
crossbeam = "0.8.0"
thincollections = "0.5.3"
wyhash = "0.4.2"
once_cell = "1.5.2"
bytecount = "0.6.1"
flate2 = { version = "1.0.19", features = ["zlib"] }
twox-hash = "1.5.0"
stdinout = "0.4.1"
static_assertions = "1.1.0"
t1ha = "0.1"
ndarray = "0.13"
ndarray-rand = "0.11"
snap = "1.0.3"
bincode = "1.3.1"
lazy_static = "1.4.0"
rust-lapper = "0.4.1"
itertools = "0.9.0"
linked_hash_set = "0.1.3"
jetscii = "0.4.4"
bumpalo = { version = "3.4.0", features = ["collections", "boxed"] }
zstd = "0.5.3"
lz4 = "1.23.1"
serde_bytes = "0.11.5"
hashbrown = { version = "0.9.1", features = ["nightly", "serde"] }


