[package]
name = "liboracular"
version = "0.2.0"
authors = ["Joseph Guhlin <joseph.guhlin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = { version = "3.11.0", features = ["collections", "boxed"] }
bytecount = "0.6.3"
itertools = "0.13"

rand = "0.8.5"
rand_core = "0.6.3"
rand_xorshift = "0.3.0"
rand_chacha = "0.3.1"

crossbeam = "0.8.2"
thincollections = "0.5.3"
once_cell = "1.14.0"

stdinout = "0.4.1"
static_assertions = "1.1.0"
ndarray = "0.15.6"
ndarray-rand = "0.14"
snap = "1.0.3"
lazy_static = "1.4.0"
rust-lapper = "1.0.1"

linked_hash_set = "0.1.3"
jetscii = "0.5.3"
hashbrown = "0.14"
libsfasta = { path = "../../sfasta/libsfasta" }
pulp = "0.18"
log = "0.4.17"



