[package]
name = "oracular"
version = "0.1.0"
authors = ["Joseph Guhlin <joseph.guhlin@gmail.com>"]
edition = "2018"

[dependencies]
bincode = "1.2.1"
flate2 = { version = "1.0.12", features = ["zlib"] }
itertools = "0.8.2"
fnv = "1.0.6"
serde = { version = "1.0.104", features = ["derive", "rc"] }
indicatif = "0.13.0"
once_cell = "1.3.1"
thincollections = "0.5.3"
crossbeam = "0.7.3"
opinionated = { path = "../../opinionated/opinionated/" }
liboracular = { path = "../liboracular/" }
num-traits = "0.2.11"
wyhash = "0.3.0"
num_cpus = "1.12.0"
# jemallocator = "0.3.2"
snap = "1"

# [target.'cfg(unix)'.dependencies]
# mimalloc = { version = "0.1.9", default-features = false }

[dependencies.clap]
version = "2.33"
features = [ "suggestions", "color", "yaml", "wrap_help"]
