[package]
name = "pyracular"
version = "0.1.1"
authors = ["Joseph Guhlin <joseph.guhlin@gmail.com>"]
edition = "2018"
readme = "README.md"

[lib]
name = "pyracular"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.17.1"
# abi3-py38 = true

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dependencies]
bytecount = "0.6.1"
twox-hash = "1.5.0"
liboracular = { path = "../liboracular/" }
crossbeam = "0.8.2"
mimalloc = { version = "0.1.24", default-features = false }
rand = "0.8.5"
rand_xoshiro = "0.6.0"
libsfasta = { path = "../../sfasta/libsfasta" }

[package.metadata.maturin]
classifier = [
    "Programming Language :: Rust",
    "Programming Language :: Python"
    ]
# project-url = ["https://github.com/jguhlin/oracular"]
