[package]
name = "pyracular"
version = "0.2.0"
authors = ["Joseph Guhlin <joseph.guhlin@gmail.com>"]
edition = "2018"
readme = "README.md"

[lib]
name = "pyracular"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.17.3"
# abi3-py38 = true

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dependencies]
bytecount = "0.6.1"
twox-hash = "1.5.0"
liboracular = { path = "../liboracular/" }
crossbeam = "0.8.2"
mimalloc = { version = "0.1.24", default-features = false }
rand = "0.8.5"
rand_xoshiro = "0.6.0"
libsfasta = { path = "../../sfasta/libsfasta" }
env_logger = "0.9.0"
log = "0.4.17"
rayon = "1.5.1"

[package.metadata.maturin]
classifier = [
    "Programming Language :: Rust",
    "Programming Language :: Python"
    ]
# project-url = ["https://github.com/jguhlin/oracular"]
