[package]
name = "pyracular"
version = "0.2.0"
authors = ["Joseph Guhlin <joseph.guhlin@gmail.com>"]
edition = "2018"
readme = "README.md"

[lib]
name = "pyracular"
crate-type = ["cdylib"]
# abi3-py38 = true

[dependencies.pyo3]
version = "0.18.0"
# abi3-py38 = true

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dependencies]
bytecount = "0.6.3"
twox-hash = "1.6.3"
liboracular = { path = "../liboracular/" }
crossbeam = "0.8.2"
mimalloc = { version = "0.1.34", default-features = false }
rand = "0.8.5"
rand_xoshiro = "0.6.0"
libsfasta = { path = "../../sfasta/libsfasta" }
env_logger = "0.10.0"
log = "0.4.17"
rayon = "1.6.1"
acc2tax = { path = "../../acc2tax" }
