[package]
name = "sfa"
version = "0.1.0"
authors = ["Joseph Guhlin <joseph.guhlin@gmail.com>"]
edition = "2018"

[dependencies]
indicatif = "0.15.0"
liboracular = { path = "../liboracular/" }
mimalloc = { version = "*", default-features = false }
rand = "0.7.3"
rand_core = "0.5"
rand_chacha = "0.2.2"
bincode = "1.3.1"
serde = { version = "1.0.106", features = ["derive"] }
thread_io = "0.3.0"

[dependencies.clap]
version = "3.0.0-beta.2"
features = [ "suggestions", "color", "yaml", "wrap_help"]
